--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{
-  "name": "portifolio-angular",
+ {
+  "name": "portfolio-angular-2025",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "format": "prettier -- write ."
+    "format": "prettier --write ."
   },
   "prettier": {
     "printWidth": 100,
@@ -29,7 +29,6 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
-    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
@@ -40,12 +39,12 @@
     "@angular/build": "^20.3.2",
     "@angular/cli": "^20.3.2",
     "@angular/compiler-cli": "^20.3.0",
-    "@eslint/js": "^9.37.0",
+    "@eslint/js": "^9.36.0",
     "@types/jasmine": "~5.1.0",
-    "eslint": "^9.37.0",
+    "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "jasmine-core": "~5.9.0",
-    "jiti": "^2.6.1",
+    "jiti": "^2.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
